# rat

./: Cargo.toml
rat_client/: Cargo.toml
rat_client/src/: main.rs
rat_config/: Cargo.toml
rat_config/src/: client_cli.yml  lib.rs  server_cli.yml
rat_error/: Cargo.toml
rat_error/src/: lib.rs
rat_server/: Cargo.toml
rat_server/src/: client.rs  main.rs
