[package]
name = "rat_client"
version = "0.1.0"
authors = ["Isaac Sikkema"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.15", default-features = false, features = ["pancurses-backend"] }

[target.'cfg(unix)'.dependencies]
cursive = "0.15"

[dependencies]
directories = "4.0"
config = "0.11"
lazy_static = "1.4"
log = "0.4"
fern = "0.6"
chrono = "0.4"

rat_error = { path = "../rat_error" }
rat_config = { path = "../rat_config" }
