[package]
name = "rat_config"
version = "0.1.0"
authors = ["Isaac Sikkema"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "2.0"
config = "0.10"
clap = { version = "2.33", features = ["yaml"] }

rat_error = { path = "../rat_error" }

