[package]
name = "rat_server"
version = "0.1.0"
authors = ["Isaac Sikkema"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0"
config = "0.11"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
fern = "0.6"
chrono = "0.4"

rat_error = { path = "../rat_error" }
rat_config = { path = "../rat_config" }

